--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   
   "scripts": {
     "start": "node app.js",
+    "server":"nodemon app.js",
+    "client":"npm start --prefix client",
+    "dev":"concurrently \"npm start\" \"npm run client\" ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },  
   "keywords": [],
