--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  
   "scripts": {
     "start": "node app.js",
-    "server":"nodemon app.js",
-    "client":"npm start --prefix client",
-    "dev":"concurrently \"npm start\" \"npm run client\" ",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },  
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -24,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.0.1",
