--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main":"app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm start\" \"npm run client\" "
   },
