--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
+  "main":"app.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm start\" \"npm run client\" "
   },
   "keywords": [],
   "author": "",
